current users moved down to avoid clipping

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -159,14 +159,13 @@ a{
 
 .usersLoggedIn{
   float:left;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 h3{
   color: white;
   text-align: center;
   margin: 5px;
-  border-top: 1px solid grey
 }
 
 .listOfOtherUsers{
